unpackaged/main/default/objects/Contact/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <description>Is used to map record type from lead during lead conversion process, to set correct record type for a contact.</description>
    <label>Record Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>