unpackaged/main/default/objects/Contact/fields/Referral_Availability__c.field-meta.xml
<CustomField>
    <fullName>Referral_Availability__c</fullName>
    <label>Referral Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
                <isActive>false</isActive>
                <label>Paused</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>