unpackaged/main/default/objects/Contact/fields/Secondary_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Insurance__c</fullName>
    <label>Secondary Insurance</label>
    <length>50</length>
    <type>Text</type>
</CustomField>