unpackaged/main/default/objects/Contact/fields/Self_Pay_Rental_Tier__c.field-meta.xml
<CustomField>
    <fullName>Self_Pay_Rental_Tier__c</fullName>
    <label>Self-Pay Rental Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
                <default>true</default>
                <label>Tier 1</label>
            </value>
            <value>
                <fullName>Tier 2 - GR only</fullName>
            </value>
            <value>
                <fullName>Tier 2 - CPM only</fullName>
            </value>
            <value>
                <fullName>Tier 2 - GR &amp; CPM</fullName>
            </value>
            <value>
                <fullName>Tier 3 - GR only</fullName>
            </value>
            <value>
                <fullName>Tier 3 - CPM only</fullName>
            </value>
            <value>
                <fullName>Tier 3 - GR &amp; CPM</fullName>
            </value>
            <value>
                <fullName>Tier 4 - GR only</fullName>
            </value>
            <value>
                <fullName>Tier 4 - CPM only</fullName>
            </value>
            <value>
                <fullName>Tier 4 - GR &amp; CPM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>