unpackaged/main/default/objects/Contact/fields/Sexual_Identity_Orientation_Specified__c.field-meta.xml
<CustomField>
    <fullName>Sexual_Identity_Orientation_Specified__c</fullName>
    <label>Sexual Identity/Orientation Specified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sexual_Identity_Orientation</valueSetName>
    </valueSet>
</CustomField>