unpackaged/main/default/objects/Contact/fields/Single_Income_with_dependents__c.field-meta.xml
<CustomField>
    <fullName>Single_Income_with_dependents__c</fullName>
    <label>Single Income with dependents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>