unpackaged/main/default/objects/Contact/fields/sms_Promo_Acknowledged_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>sms_Promo_Acknowledged_Date_Time__c</fullName>
    <label>sms Promo Acknowledged Date/Time</label>
    <type>DateTime</type>
</CustomField>