unpackaged/main/default/objects/Contact/fields/State_License__c.field-meta.xml
<CustomField>
    <fullName>State_License__c</fullName>
    <label>State License #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>