unpackaged/main/default/objects/Contact/fields/State_License_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>State_License_Exp_Date__c</fullName>
    <label>State License Exp Date</label>
    <type>Date</type>
</CustomField>