unpackaged/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Not moving on</fullName>
            </value>
            <value>
                <fullName>Moving on to review</fullName>
            </value>
            <value>
                <fullName>Pending committee score</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
            <value>
                <fullName>Pending Deactivation</fullName>
            </value>
            <value>
                <fullName>Enabled</fullName>
            </value>
            <value>
                <fullName>Pending Disablement</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
                <isActive>false</isActive>
                <label>Paused</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>