unpackaged/main/default/objects/Contact/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete BG Check</fullName>
                <label>BGC</label>
            </value>
            <value>
                <fullName>Missing CAQH number</fullName>
                <label>CAQH</label>
            </value>
            <value>
                <fullName>Closed Practice</fullName>
            </value>
            <value>
                <fullName>Documentation Issues</fullName>
                <label>Documentation</label>
            </value>
            <value>
                <fullName>Expired Credentials</fullName>
                <label>Expired Credential</label>
            </value>
            <value>
                <fullName>Left Group Practice</fullName>
                <label>Left group practice</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>