unpackaged/main/default/objects/Contact/fields/Sub_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sub_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Rep</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Sub Rep)</relationshipLabel>
    <relationshipName>SubRepContacts</relationshipName>
    <type>Lookup</type>
</CustomField>