unpackaged/main/default/objects/Contact/fields/Territory_Notes__c.field-meta.xml
<CustomField>
    <fullName>Territory_Notes__c</fullName>
    <label>Territory Notes</label>
    <type>TextArea</type>
</CustomField>