unpackaged/main/default/objects/Contact/fields/Text_opt_in__c.field-meta.xml
<CustomField>
    <fullName>Text_opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the patient has agreed to the text opt-in during the request a consultation form submission.</description>
    <inlineHelpText>Indicates the patient has agreed to the text opt-in during the request a consultation form submission.</inlineHelpText>
    <label>Text opt-in</label>
    <type>Checkbox</type>
</CustomField>