unpackaged/main/default/objects/Contact/fields/Text_opt_in_promo__c.field-meta.xml
<CustomField>
    <fullName>Text_opt_in_promo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Text opt-in Promo</label>
    <type>Checkbox</type>
</CustomField>