unpackaged/main/default/objects/Contact/fields/Text_opt_in_transactional__c.field-meta.xml
<CustomField>
    <fullName>Text_opt_in_transactional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Text opt-in Transactional</label>
    <type>Checkbox</type>
</CustomField>