unpackaged/main/default/objects/Contact/fields/TLN_Employer_Participation__c.field-meta.xml
<CustomField>
    <fullName>TLN_Employer_Participation__c</fullName>
    <label>TLN Employer Participation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Participant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>