unpackaged/main/default/objects/Contact/fields/TLN_Engagement__c.field-meta.xml
<CustomField>
    <fullName>TLN_Engagement__c</fullName>
    <label>TLN Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TLN_Engagement</valueSetName>
    </valueSet>
</CustomField>