unpackaged/main/default/objects/Contact/fields/Triennial_BG_Check__c.field-meta.xml
<CustomField>
    <fullName>Triennial_BG_Check__c</fullName>
    <description>Is used to capture the result of a triennial background check for LCs.</description>
    <label>Triennial BG Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MonthlyBackgroundCheck</valueSetName>
    </valueSet>
</CustomField>