unpackaged/main/default/objects/Contact/fields/Triennial_BG_Date__c.field-meta.xml
<CustomField>
    <fullName>Triennial_BG_Date__c</fullName>
    <label>Triennial BG Date</label>
    <type>Date</type>
</CustomField>