unpackaged/main/default/objects/Contact/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Administrative Assistant</fullName>
            </value>
            <value>
                <fullName>Athletic Trainer</fullName>
            </value>
            <value>
                <fullName>Clinical Concierge</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>GMX Patient</fullName>
            </value>
            <value>
                <fullName>Lactation Consultant</fullName>
            </value>
            <value>
                <fullName>Medical Assistant</fullName>
            </value>
            <value>
                <fullName>Medical Records</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>Office Manager</fullName>
            </value>
            <value>
                <fullName>Orthotic Fitter</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Patient Care Coordinator</fullName>
            </value>
            <value>
                <fullName>Physician’s Assistant</fullName>
            </value>
            <value>
                <fullName>Practice Manager</fullName>
            </value>
            <value>
                <fullName>Pre-Certification Rep</fullName>
            </value>
            <value>
                <fullName>Private Insurance Coordinator</fullName>
            </value>
            <value>
                <fullName>Sales Reps</fullName>
            </value>
            <value>
                <fullName>Surgery Scheduler</fullName>
            </value>
            <value>
                <fullName>Team Lead</fullName>
            </value>
            <value>
                <fullName>WC Coordinator</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Benefit Manager</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Contracting</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>