unpackaged/main/default/objects/Contact/fields/Type_of_Termination__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Termination__c</fullName>
    <label>Type of Termination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self terminated</fullName>
            </value>
            <value>
                <fullName>Terminated by TLN</fullName>
            </value>
            <value>
                <fullName>Immediate agreed by both parties</fullName>
            </value>
            <value>
                <fullName>Termed with cause - immediate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>