unpackaged/main/default/objects/Contact/fields/Update_Record_for_MC__c.field-meta.xml
<CustomField>
    <fullName>Update_Record_for_MC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Record for MC</label>
    <type>Checkbox</type>
</CustomField>