unpackaged/main/default/objects/Contact/fields/Visit_Types__c.field-meta.xml
<CustomField>
    <fullName>Visit_Types__c</fullName>
    <label>Visit Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Telehealth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>