unpackaged/main/default/objects/Contact/fields/Why_Interested_How_can_we_help__c.field-meta.xml
<CustomField>
    <fullName>Why_Interested_How_can_we_help__c</fullName>
    <label>Why Interested/How can we help</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>