unpackaged/main/default/objects/Contact/recordTypes/Commercial_External.recordType-meta.xml
<RecordType>
    <fullName>Commercial_External</fullName>
    <active>true</active>
    <label>Commercial/External</label>
</RecordType>