unpackaged/main/default/objects/Contact/recordTypes/Grant_Applicant.recordType-meta.xml
<RecordType>
    <fullName>Grant_Applicant</fullName>
    <active>true</active>
    <label>Grant Applicant</label>
</RecordType>