unpackaged/main/default/objects/Contact/recordTypes/Lactation_Consultant.recordType-meta.xml
<RecordType>
    <fullName>Lactation_Consultant</fullName>
    <active>true</active>
    <label>Lactation Consultant</label>
</RecordType>