unpackaged/main/default/objects/Contact/validationRules/Validate_Alternate_Email_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Alternate_Email_1</fullName>
    <active>true</active>
    <description>Is used to make sure Email field is filled before populating alternate email field.</description>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Status__c, &#39;Disabled&#39;)), ISBLANK(Email), NOT(ISBLANK(Alternate_Email_1__c)))</errorConditionFormula>
    <errorDisplayField>Alternate_Email_1__c</errorDisplayField>
    <errorMessage>Email field shall be populated before storing Alternate Email.</errorMessage>
</ValidationRule>