unpackaged/main/default/objects/Contact/listViews/Lactation_Consultants.listView-meta.xml
<ListView>
    <fullName>Lactation_Consultants</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Lactation_Consultant</value>
    </filters>
    <label>Lactation Consultants</label>
</ListView>